More ponies, more community updates

--- a/latex/glt_2022_infinisim.tex
+++ b/latex/glt_2022_infinisim.tex
@@ -55,6 +55,38 @@
 %\tableofcontents[part=0]
 %\end{frame}
 
+\section{Specs}
+\begin{frame}{}
+  \begin{columns}
+  \begin{column}{0.6\textwidth}
+
+    \begin{itemize}
+      \item \textbf{Display:}
+      \begin{itemize}
+        \item \textbf{Size:} 1.3 inches (33mm) diagonal)
+        \item \textbf{Resolution:} 240x240 pixels
+      \end{itemize}
+      \item \textbf{System on Chip:}\\Nordic Semiconductor nRF52832 with 64~MHz~ARM~Cortex-M4F
+      \item \textbf{Flash:}\\514KB with additional 4MB~SPI~NOR
+      \item \textbf{RAM:} 64KB
+      \item \textbf{Bluetooth:} 5.0\\(including Bluetooth Low Energy)
+      \item \textbf{Sensors:}\\Accelerometer, Heart rate sensor
+      \item \textbf{Feedback:} Vibration motor
+      \item \textbf{Battery:} 180mAh 3.8V LiPo
+    \end{itemize}
+    %\quad \includegraphics[width=\textwidth]{../pinetime_specs}
+  \end{column}
+  \begin{column}{0.5\textwidth}
+    \includegraphics[width=\textwidth]{../pinetime-slider-v2}
+  \end{column}
+  \end{columns}
+
+  \medskip
+
+  \small
+  \href{https://wiki.pine64.org/wiki/PineTime}{https://wiki.pine64.org/wiki/PineTime}
+\end{frame}
+
 \section{The Beginnings}
 \begin{frame}{The Beginnings}
   \begin{columns}
@@ -120,14 +152,22 @@
 \section{Screens}
 \subsection{Where to start?}
 \begin{frame}{}
-  \begin{itemize}
-    \item Something easy
-    \item little dependencies
-  \end{itemize}
+  %\begin{itemize}
+  %  \item Something easy
+  %  \item little dependencies
+  %\end{itemize}
   \includegraphics[width=\textwidth]{../ponies_thinking}
 
   \small \href{http://awthredestim.blogspot.com/2012/04/my-little.html}{My Little Pony: Friendship is Magic. Season 2 "Ponyville Confidential"}
 \end{frame}
+
+\subsection{Starting small}
+\begin{frame}{}
+  \includegraphics[width=\textwidth]{../pony_cookie_jar_raid_by_beavernator}
+
+  \small \href{https://www.deviantart.com/beavernator/art/Cookie-Jar-Raid-362413620}{by Beavernator on deviantart}
+\end{frame}
+
 
 \begin{frame}[fragile]{}
 
@@ -167,12 +207,14 @@ src/displayapp/LittleVGL.cpp
 
   Writes directly to framebuffer, headache to simulate
 \end{frame}
+
 \begin{frame}{}
   \centering
   \includegraphics[height=0.8\paperheight]{../2021-11-03_Paddle_with_fonts.png}
 
   Found the fonts! Now it looks like on the watch
 \end{frame}
+
 \begin{frame}{}
   \centering
   \includegraphics[height=0.8\paperheight]{../2021-11-03_Twos_first_sim.png}
@@ -245,6 +287,13 @@ src/displayapp/LittleVGL.cpp
   \quad \small https://user-images.githubusercontent.com/9076163/151057090-66fa6b10-eb4f-4b62-88e6-f9f307a57e40.gif}
 \end{frame}
 
+\subsection{remaining screens}
+\begin{frame}{}
+  \includegraphics[width=\textwidth]{../pony_applejack_hauling_apples_S01E25}
+
+  \small \href{https://mlp.fandom.com/wiki/Party_of_One/Gallery}{My Little Pony: Friendship is Magic. Season 1 Episode 25\\Gummy's "after-birthday" party}
+\end{frame}
+
 \section{InfiniSim Project}
 
 \subsection{2022-02-12 You've got mail!}
@@ -265,11 +314,32 @@ src/displayapp/LittleVGL.cpp
   \centering\includegraphics[width=0.9\textwidth]{../2022-02-17_InfiniSim_initial_commit}
 \end{frame}
 
+\section{The End}
+\subsection{Really?}
+\begin{frame}{}
+  \centering\includegraphics[width=0.5\textwidth]{../pony_big_mac_nope}
+
+  \small \href{https://www.pinterest.fr/pin/517280707176866947/}{on pinterest by GUMMY MADERFAKER}
+\end{frame}
+
+\section{Community}
 \subsection{2022-02-20 a wild PinePhonePro appears}
 \begin{frame}{}
-
   \centering\includegraphics[width=0.9\textwidth]{../2022-02-20_InfiniSim_on_PinePhonePro}
+\end{frame}
 
+\subsection{2022-03-15 Pine64 March community update}
+\begin{frame}{}
+  \centering\includegraphics[width=0.8\textwidth]{../2022-03-15_pinetime_montage}
+
+  \small \href{https://www.pine64.org/2022/03/15/march-update-introducing-the-quartzpro64/}{Pine64 March community update}
+\end{frame}
+
+\subsection{2022-04-20 InfiniSim on ChromeOS Crostini}
+\begin{frame}{}
+  \centering\includegraphics[width=0.9\textwidth]{../2022-04-20_infinisim_on_chrome_os}
+
+  \small \href{https://www.reddit.com/r/pinetime/comments/u7mdt3/the_infinisim_works_on_chrome_os_crostini/}{on reddit by joseph58tech}
 \end{frame}
 
 \section{Links}
@@ -304,5 +374,12 @@ src/displayapp/LittleVGL.cpp
 
 \end{frame}
 
-\end{document}
+\section{The End}
+\subsection{Really?}
+\begin{frame}{}
+  \centering\includegraphics[width=0.55\textwidth]{../pony_big_mac_ayup}
 
+  \small \href{https://mlpfanart.fandom.com/wiki/Big_Macintosh/Gallery}{https://mlpfanart.fandom.com/wiki/Big\_Macintosh/Gallery}
+\end{frame}
+
+\end{document}
