Thanks for watching slide

--- a/latex/glt_2022_infinisim.tex
+++ b/latex/glt_2022_infinisim.tex
@@ -377,9 +377,27 @@ src/displayapp/LittleVGL.cpp
 \section{The End}
 \subsection{Really?}
 \begin{frame}{}
-  \centering\includegraphics[width=0.55\textwidth]{../pony_big_mac_ayup}
+  \begin{columns}
+  \begin{column}{0.22\textwidth}
+
+  \end{column}
+  \begin{column}{0.5\textwidth}
+    \includegraphics[width=\textwidth]{../pony_big_mac_ayup}
+  \end{column}
+  \begin{column}{0.22\textwidth}
+    Thanks for listening
+  \end{column}
+  \end{columns}
+
+  \centering
+
+  \medskip
 
   \small \href{https://mlpfanart.fandom.com/wiki/Big_Macintosh/Gallery}{https://mlpfanart.fandom.com/wiki/Big\_Macintosh/Gallery}
+
+  %\vskip -42pt
+  %\raggedleft
+  %Thanks for listening
 \end{frame}
 
 \end{document}
